--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Risda Silviani</span>
+                <span id="name">Fiona Wilana</span>
             </h1>
-            <p class="two" id="greetingText">I very happy that you gave my game nickname HimitsuHito</p>
+            <p class="two" id="greetingText"></p>
         </div>
 
         <div class="three">
@@ -46,16 +46,16 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Abang Mu benar-benar minta maaf yah</p>
+            <p class="idea-2">Bener-bener minta maaf</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                Ini Kubuatku untukmu karena kamu adikku yang<br>
                 <strong>special</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Abang minta maaf</p>
             <p class="idea-5">
-                You are Special
+                Maafin yah
                 <span>:)</span>
             </p>
             <p class="idea-6">
