--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Hi
                 <span id="name">Mia Sukmawati</span>
             </h1>
-            <p class="two" id="greetingText">I am very happy to know you Mia Sukmawati/p>
+            <p class="two" id="greetingText">I am very happy to know you Mia Sukmawati </p>
         </div>
 
         <div class="three">
