--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">I'm sure this year will be more difficult.
+            </p>
+            <p class="idea-2">But i'm also sure you can get through it</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                and  I made something <br>
                 <strong>special</strong>
                 .
             </p>
@@ -65,7 +66,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/risda.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/mia.webp" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
