--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>Happy Birthday!!! :)</title>
+  <title>Hari Ujian</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,30 +27,30 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Mia Sukmawati</span>
+                <span id="name">Nanda Rizkiani</span>
             </h1>
-            <p class="two" id="greetingText">I am very happy to know you Mia Sukmawati </p>
+            <p class="two" id="greetingText">I am very happy to meet you  </p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p> it's your exam day :D</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! i hope everything you want will be achieved this year
+                Selamat Mengerjakan Ujian. Kamu sudah berjuang sampai tahap ini. kamu hanya perlu fokus mengerjakan okay. 
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">I'm sure this year will be more difficult.
+            <p class="idea-1"> Aku sangat yakin kamu bisa melewati ini semua dan berhasil. 
             </p>
-            <p class="idea-2">But i'm also sure you can get through it</p>
+            <p class="idea-2">Jadi jangan terlalu pesimis karena kamu sudah berjuang</p>
             <p class="idea-3">
-                and  I made something <br>
+                aku membuat ini karena kamu adalah orang yang sangat <br>
                 <strong>special</strong>
                 .
             </p>
@@ -69,8 +69,8 @@
             <img src="./img/mia.webp" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May you always live long and be healthy and sufficient sustenance ;)</h5>
+                <h3 class="wish-hbd">Selamat Mengerjakan </h3>
+                <h5 id="wishText">I really hope you are calm and careful in doing the questions.</h5>
             </div>
         </div>
 
