--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
 
         <div class="six">
-            <img src="./img/mia.webp" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="./img/nanda.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            
             <div class="wish">
                 <h3 class="wish-hbd">Selamat Mengerjakan </h3>
                 <h5 id="wishText">I really hope you are calm and careful in doing the questions.</h5>
